--- a/doc/Project.tex
+++ b/doc/Project.tex
@@ -522,18 +522,18 @@ Parallelization could not be properly implemented because of some SpiNNaker issu
 First of all, some strange errors arose during the parallelization implementation. Particularly, message exchanging problems where persistent. Whereas the \textit{ERR\_MSG} was correctly sent to slaves, some mysterious reasons prevented the \textit{UPD\_MSG} from being sent from slaves to the master. Actually, whenever the key were manipulated, the SpiNNaker just freezed and nothing happened. This problem sadly has yet to be solved.\\ \\
 
 The other encountered problem comes from performance. As stated in the previous section, it is crucial for the message exchange phase to complete within the \(\Delta t\) time limit. \\
-In order to check if the SpiNNaker were enough powerfull to overcome this restriction, some speed tests have been performed. \\
+In order to check if the SpiNNaker is enough powerfull to overcome this restriction, some speed tests have been performed. \\
 Sadly, the results are really discouraging, as the SpiNNaker reveals to be very slow. \\
-Two tests have been performed. They used a very clean code version without any loaded library or additional computation. Just simple message exchange was performed. The testswere:
+Two tests have been performed. They used a very clean code version without any loaded library or additional computation. Just simple message exchange was verified. The tests were:
 
 \begin{itemize}
 \item Intrachip performance: a master node and 14 slave nodes located in the same chip were analyzed. The master sent a first simple message to the slaves, after which they all replied to the master with another simple message. Results showed that a lot of packets were lost in the process, both from the master and the slaves. In addition, the system was slower than normally expected.
 
-\item Independence communication. The second test analized 3 pairs of cores located inside the same chip. For each pair, a core sent 4 messages per \(\Delta t\) to the other core. However, the couples were completely independent in their message exchanging. On a first trial, only one pair was active and the receiving core received every packet. However, as the other pairs were activated, this was no more the case and many packets were lost. It is hypothesized that the bottleneck could be the multicast table, as each core has to read it before the packet can reach its destination.
+\item Independence communication. The second test analized 3 pairs of cores located inside the same chip. For each pair, a core sent 4 messages per \(\Delta t\) to the other core. However, the pairs were completely independent in their message exchanging. On a first trial, only one pair was active and the receiving core received every packet. However, as the other pairs were activated, this was no more the case and many packets were lost. It is hypothesized that the bottleneck could be the multicast table, as each core has to read it before the packet can reach its destination.
 \end{itemize}
 
 As stated in the previous examples, performance results are really bad. In addition, the multicast design principle goes totally in the opposite direction with respect to the brain structure, where neurons are totally independent from their neighbours. \\
-There is however the question of whether this particular SpiNNaker unit had some hardware problems, as in any case the number of exchanged packets was too small to possibly induce such noticeable problem.
+There is however the question of whether this particular SpiNNaker unit had some hardware problems, as in any case the number of exchanged packets was too small to possibly induce such noticeable problems.
 
 
 \section{Conclusion}
